fix code in block getting wrapped

--- a/assets/css/app.sass
+++ b/assets/css/app.sass
@@ -62,7 +62,7 @@ code
   color: #333
   font-size: 15px
   background-color: #f0f0f0
-  padding: 2px 3px
+  padding: 3px 4px
   white-space: nowrap
 
 // `code` font size relative to the header font size
@@ -81,6 +81,7 @@ pre
   code
     background-color: #f8f8f8
     padding: 0
+    white-space: pre
 
 table
   width: 100%
